--- a/My_favorite_movie-main/index.html
+++ b/My_favorite_movie-main/index.html
@@ -32,7 +32,7 @@
 
     <section>
         <h2>Trailer</h2>
-        <iframe width="560" height="315" src="assets/Barbie_Main_Trailer.mp4" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pBk4NYhWNMM?si=w3Py2fC1xK9fC2Du" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
 
     
