--- a/My_favorite_movie-main/index.html
+++ b/My_favorite_movie-main/index.html
@@ -33,6 +33,9 @@
     <section>
         <h2>Trailer</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/pBk4NYhWNMM?si=w3Py2fC1xK9fC2Du" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+         <h2>Just Ken Exclusive</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Y1IgAEejvqM?si=CC06h1hBBGj8-_-5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p>Ken is de GOAT.</p>
     </section>
 
     
