--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
     </section>
 
     <section>
-        <h2>Trailer</h2>
+       <h2>Trailer</h2>
         <iframe width="560" height="315" src="assets/Barbie_Main_Trailer.mp4" allowfullscreen></iframe>
+        <h2>Just Ken Exclusive</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Y1IgAEejvqM?si=CC06h1hBBGj8-_-5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p>Ken is de GOAT.</p>
+        
     </section>
 
     
